--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -36,6 +36,7 @@ $dark-grey: #636363;
 $darkest-grey: #515151;
 $blue: #3266AD;
 $red: #E84D3D;
+$comment-grey: #EFEFEF;
 // gradient-button //
 $green: #00AA58;
 $skyblue: #00A6B9;
