--- a/resources/assets/sass/modules/card.scss
+++ b/resources/assets/sass/modules/card.scss
@@ -113,15 +113,62 @@
         }
     }
     .comments{
-        min-height: 50px;
-        background-color: $lightest-grey;
-        .ico{
-            height: 35px;
-            width: 35px;
-            border-radius: 25px;
-            background-color: $dark-blue;
-            color: $white;
-            text-align: center;
+        // min-height: 50px;
+        background-color: $comment-grey;
+        .comment-wrapper{
+            padding: 20px;
+            padding-bottom: 10px;
+            min-height: 35px;
+            .ico{
+                display: inline-block;
+                height: 35px;
+                width: 35px;
+                border-radius: 25px;
+                background-color: $dark-blue;
+                color: $white;
+                text-align: center;
+            }
+            .comment-input{
+                margin-left: 8px;
+                display: inline-block;
+                width: 80%;
+                textarea{
+                    padding-left: 15px;
+                    margin-bottom: -5px;
+                    color: $darkest-grey;
+                    width: 100%;
+                    resize: none;
+                    border: none;
+                }
+                textarea:focus{
+                    outline: none;
+                }
+            }
+        }
+        .comment-show{
+            padding: 20px;
+            padding-top: 5px;
+            .ico{
+                display: inline-block;
+                height: 35px;
+                width: 35px;
+                border-radius: 25px;
+                background-color: $skyblue;
+                color: $white;
+                text-align: center;
+            }
+            .comment-text{
+                margin-left: 8px;
+                display: inline-block;
+                background-color: $white;
+                padding: 8px;
+                max-width: 80%;
+                p{
+                    line-height: 17px;
+                    font-size: .9rem;
+                    margin-bottom: 0px;
+                }
+            }
         }
     }
 }
